--- a/src/app/modals/add-torrent-dialog/add-torrent-dialog.component.scss
+++ b/src/app/modals/add-torrent-dialog/add-torrent-dialog.component.scss
@@ -18,7 +18,7 @@
     max-height: unset;
 
     #choose_save_location {
-      width: 95%;
+      width: 85%;
       min-width: 300px;
 
       display: flex;
