--- a/src/styles.scss
+++ b/src/styles.scss
@@ -175,7 +175,7 @@ body {
 
 /*** CUSTOM SCROLLBAR ***/
 ::-webkit-scrollbar {
-  width: 5px;   /** Target vertical scroll-bars */
+  width: 8px;   /** Target vertical scroll-bars */
   height: 8px;  /** Target horizontal scroll-bars */
 }
 
